syntax = "proto3";

option csharp_namespace = "TradeBotClient";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package TradeBot;

service SteamTradeBot{
	rpc StartBot (StartRequest) returns (StartResponse);
	rpc StopBot (StopRequest) returns (StopResponse);
	rpc SetConfiguration(SetConfigurationRequest) returns (SetConfigurationResponse);
	rpc LoadItemList (LoadItemListRequest) returns (LoadItemListResponse);
	rpc ClearMyLots (ClearMyLotsRequest) returns (ClearMyLotsResponse);
	rpc LogIn(LogInRequest) returns (LogInResponse);
	rpc LogOut(LogOutRequest) returns (LogOutResponse);
	rpc Report(SubscribeReports) returns (stream WriteReport);

}

message StartRequest{
	google.protobuf.Empty empty = 1;
}
message StartResponse{
	google.protobuf.Empty empty = 1;
}
message StopRequest{
	google.protobuf.Empty empty = 1;
}
message StopResponse{
	DefaultResponse response = 1;
}
message SetConfigurationRequest{
	string configurationJson = 1;
}
message SetConfigurationResponse{
	google.protobuf.Empty empty = 1;
}
message LoadItemListRequest{
	google.protobuf.Empty empty = 1;
}
message LoadItemListResponse{
	DefaultResponse response = 1;
}
message LogInRequest{
	string login = 1;
	string password = 2;
	string token = 3;
}
message LogInResponse{
	string username = 1;
	DefaultResponse response = 2;
}
message LogOutRequest{
	google.protobuf.Empty empty = 1;
}
message LogOutResponse{
	DefaultResponse response = 1;
}


message SubscribeReports{
	google.protobuf.Empty empty = 1;
}
message WriteReport{
	oneof event_type{
		double balance = 1;
		string message = 2;
	}
}

message ClearMyLotsRequest{
	google.protobuf.Empty empty = 1;
}

message ClearMyLotsResponse{
	DefaultResponse response = 1;
}

message DefaultResponse{
	ReplyCode code = 1;
	string message = 2;
}

enum ReplyCode{
	REPLY_CODE_UNSPECIFIED = 0;
	REPLY_CODE_SUCCEED = 1;
	REPLY_CODE_FAILURE = 2;
}